Add basic crew factory tests

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(sc_test PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/test_crew_member.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/test_crew_factory.cpp
         ${CMAKE_CURRENT_LIST_DIR}/test_flying_debris.cpp
         ${CMAKE_CURRENT_LIST_DIR}/test_item.cpp
         ${CMAKE_CURRENT_LIST_DIR}/test_main.cpp
