--- a/src/play/ui/CMakeLists.txt
+++ b/src/play/ui/CMakeLists.txt
@@ -4,7 +4,7 @@ set(UI_SRC
         ${CMAKE_CURRENT_LIST_DIR}/pause_menu.cpp
         ${CMAKE_CURRENT_LIST_DIR}/running_ui.cpp
         ${CMAKE_CURRENT_LIST_DIR}/setup_ui.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/inventory_ui.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/store_ui.cpp
         )
 
 target_sources(sc PRIVATE ${UI_SRC})
